css/style.css
/* ... */
@font-face {
	font-family:"Didot W02 Italic";
	src:url("../Fonts/694358/2f50937c-d04a-4785-90e2-c0ea941afa28.eot?#iefix");
	src:url("../Fonts/694358/2f50937c-d04a-4785-90e2-c0ea941afa28.eot?#iefix") format("eot"),url("../Fonts/694358/5c08ac2f-b8ec-4fc7-9369-fe3cf967808f.woff") format("woff"),url("../Fonts/694358/9cc897c4-3032-4590-a9d9-25b5827d6d3a.ttf") format("truetype"),url("../Fonts/694358/54d7b27d-e7e7-4e5d-8371-b079d9c1cbc3.svg#54d7b27d-e7e7-4e5d-8371-b079d9c1cbc3") format("svg");
}


/** GENERAL **/
body, html {
	background: #000;
	color: #FFF;
	font-family: "Didot W02 Italic", "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
	font-size: 18px;
	margin: 0;
	padding: 0;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}

a {
	-o-transition:color .2s ease-in-out, background .2s ease-in-out;
	-ms-transition:color .2s ease-out, background .2s ease-in-out;
	-moz-transition:color .2s ease-out, background .2s ease-in-out;
	-webkit-transition:color .2s ease-out, background .2s ease-in-out;
	transition:color .2s ease-out, background .2s ease-in-out;
}
span.heading,
span.subheading {
	text-transform: uppercase;
	text-align: center;
	position: relative;
}

span.heading {
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 67px;
	font-weight: 500;
	letter-spacing: 6px;
	word-spacing: 8px;
}

div.location h3 {
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 20px;
	font-weight: 500;
	letter-spacing: 4px;
	text-transform: uppercase;
}

div.address {
	font-family : 'myriad-pro', 'Myriad Pro', Myriad, sans-serif;
	float: left;
	margin-right: 60px;
	font-size: 16px;
}

div.address span,
div.address span a {
	color: #0048BB;
	text-decoration: none
}

div.address a.add {
	text-decoration: none;
	color: white;
}

#contact-bubble {
	font-family: "Didot W02 Roman";
	font-size: 20px;
	text-transform: uppercase;
	letter-spacing: 3px;
	word-spacing: 2px;
	width: 134px;
	height: 38px;
	background: url('../img/bubble.png' ) no-repeat;
	float: right;
	padding: 43px;
	cursor: pointer;
	-webkit-transition: opacity .25s ease-in-out, background .25s ease-in-out;
	-moz-transition: opacity .25s ease-in-out, background .25s ease-in-out;
	-o-transition: opacity .25s ease-in-out, background .25s ease-in-out;
	transition: opacity .25s ease-in-out, background .25s ease-in-out;
}

#contact-bubble a {
	white-space: nowrap;
	margin-left: -5px;
}

#contact-bubble:hover {
	color: #0048BB;
	background: url('../img/bubble-hover.png' ) no-repeat;
}

#contact-form {
	display: none;
	float: right;
	clear: both;
	width: 276px;
}

#contact-form #name {
	float: left;
	margin-right: 30px;
}

#contact-form label,
#contact-form input,
#message textarea {
	display: block;
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 12px;
	font-weight: 500;
	letter-spacing: 2px;
	text-transform: uppercase;
	padding: 4px;
	width: 108px;
}

#contact-form #email {
	float: left
}

div.hidden-message {
	display: none
}

#contact-form input {
	margin-top: 3px;
}

#contact-form #message {
	margin-top: 9px;
}

#contact-form #message textarea {
	width: 257px;
	height: 60px;
	margin-top: 3px;
}

#contact-form input[type="submit"] {
	background: transparent;
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 15px;
	text-transform: uppercase;
	color: #FFF;
	font-weight: 500;
	text-decoration: none;
	letter-spacing: 5px;
	border: 1px solid white;
	margin: 10px 0 0 6px;
	padding: 4px 4px 4px 9px;
	-o-transition:color .2s ease-out, background 1s ease-in, border-color .2s ease-out;
	-ms-transition:color .2s ease-out, background 1s ease-in, border-color .2s ease-out;
	-moz-transition:color .2s ease-out, background 1s ease-in, border-color .2s ease-out;
	-webkit-transition:color .2s ease-out, background 1s ease-in, border-color .2s ease-out;
	transition:color .2s ease-out, background 1s ease-in, border-color .2s ease-out;
	cursor: pointer;
}

#contact-form input[type="submit"]:hover,
#contact-form input[type="submit"]:focus {
	color: #0380FF;
	border: 1px solid #0380FF;
}

.down-arrow {
	border-color: #161616 transparent;
	border-style: solid;
	border-width: 20px 15px 0px 15px;
	height: 0px;
	width: 0px;
	position: absolute;
	z-index: 100;
	left: 240px;
	opacity: 0.95;
}

span.subheading {
	font-family: "Didot W02 Italic", "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
	font-size: 22px;
	display: block;
	letter-spacing: 4px;
	word-spacing: 3px;
}

div.panel {
	width: 100%;
	padding: 0;
	z-index: 10;
	position: relative;
	min-height:100px;
}

div.panel.location {
	background-color: #161616;
	opacity: .95;
	padding: 25px 0;
}

div.panel-container,
nav.header {
	width: 100%;
	margin: 0 auto;
	overflow: auto;
}

body.home #panel-2 .panel-container {
	width: 80%;
	min-width: 1000px;
}

nav.header {
	margin: 0 auto;
}

nav.header ul {
	float: right;
	width: 100%

}

nav.header li {
	display: inline-block;
	margin-right: 6%;
	position: relative;
	bottom: 87px;
}

nav.header li.logo {
	bottom: 0;
}

nav.header li a {
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 21px;
	text-transform: uppercase;
	color: #FFF;
	font-weight: 500;
	text-decoration: none;
	letter-spacing: 5px;
	background: url( ../img/blank-caret.png ) no-repeat center center;
	padding-top: 50px;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	-ms-transition: all 0.5s;
	-o-transition: all 0.5s;
	transition: all 0.5s;
}

nav.header li a.selected,
nav.header li a:hover {
	background: url(../img/nav-caret.png) no-repeat center center;
}

nav.header li.logo a:hover {
	background: transparent;
}

div.panel {
	margin-top: 140px;
}

div.panel.map,
div.panel.colophon {
	margin-top: 0;
}

/** HOME SPECIFIC **/

#panel-1.panel {
	text-align: center;
	margin-top: 0;
	margin: 0 0 300px 0;
}
/* ... */

